--- a/index1.html
+++ b/index1.html
@@ -69,7 +69,7 @@
 
         <div
           id="menu"
-          class="hidden bg-color-primary-dark h-[-100vh] absolute inset-0"
+          class="hidden bg-color-primary-dark h-[-100vh] absolute inset-0 z-40"
         >
           <ul class="h-full grid place-items-center py-20">
             <li>
@@ -106,16 +106,63 @@
             </li>
             <li>
               <!-- button for sell -->
-              <button
-                class="bg-color-secondary px-9 py-3 rounded-md capitalize font-sans hover:opacity-80 ease-in duration-200"
-              >
-                Buy Now
-              </button>
+              <button class="btn">Buy Now</button>
             </li>
           </ul>
         </div>
       </nav>
     </header>
     <!-- header ended -->
+
+    <!-- main page -->
+    <main>
+      <section id="home" class="relative">
+        <!-- blobs of background -->
+        <div
+          class="w-80 h-80 bg-color-blob absolute top-0 -left-5 -z-10 blur-2xl opacity-30 overflow-hidden rounded-full"
+        ></div>
+
+        <!-- blob second -->
+        <div
+          class="w-80 h-80 bg-color-secondary absolute bottom-10 right-0 -z-10 blur-2xl opacity-30 overflow-hidden rounded-full"
+        ></div>
+        <!-- blobs of background -->
+        <div class="container py-20">
+          <div class="flex flex-col items-center z-20 md:flex-row">
+            <div class="text-center md-12 md:w-1/2 md:pr-10">
+              <h1 class="title mb-4">Join to us Illuminati groups</h1>
+              <p class="leading-relaxed mb-10">
+                Man khode khodam mikhaham jahan ro fath konam ba sandali chon
+                sandali roo az man gereftesh beni bella bemola
+              </p>
+              <button class="btn">Buy Now</button>
+            </div>
+            <div class="md:w-1/2">
+              <img src="imgs/robot inteligence.png" alt="robot human logo" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="contact" class="bg-color-primary-light">
+        <div class="container py-20">
+          <!-- cards about benefits of site -->
+          <div class="text-center m-auto mb-20 md:w-1/2">
+            <h4 class="font-bold text-color-secondary mb-4">Our benefits</h4>
+            <h1 class="title">Relax with our site to make a robot</h1>
+          </div>
+
+          <div
+            class="grid lg:grid-cols-3 md:grid-cols-2 lg:px-8 sm:px-6 gap-12 lg:gap-8 px-4"
+          >
+            <!-- card no 1 -->
+            <div class="border-2 border-solid border-color-gray">card 1</div>
+            <div class="border-2 border-solid border-color-gray">card 2</div>
+            <div class="border-2 border-solid border-color-gray">card 3</div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- main and start of page ended -->
   </body>
 </html>
