--- a/index1.html
+++ b/index1.html
@@ -47,9 +47,9 @@
             </li>
             <li>
               <a
-                href="#blog"
+                href="#signin/up"
                 class="hover:text-color-secondary ease-in duration-200"
-                >Blog</a
+                >sign in/up</a
               >
             </li>
             <li>
@@ -99,9 +99,9 @@
             <li>
               <a
                 id="hlink"
-                href="#blog"
+                href="#signin/up"
                 class="hover:text-color-secondary ease-in duration-200"
-                >Blog</a
+                >sign in/up</a
               >
             </li>
             <li>
@@ -118,14 +118,10 @@
     <main>
       <section id="home" class="relative">
         <!-- blobs of background -->
-        <div
-          class="w-80 h-80 bg-color-blob absolute top-0 -left-5 -z-10 blur-2xl opacity-30 overflow-hidden rounded-full"
-        ></div>
+        <div class="blob1"></div>
 
         <!-- blob second -->
-        <div
-          class="w-80 h-80 bg-color-secondary absolute bottom-10 right-0 -z-10 blur-2xl opacity-30 overflow-hidden rounded-full"
-        ></div>
+        <div class="blob2"></div>
         <!-- blobs of background -->
         <div class="container py-20">
           <div class="flex flex-col items-center z-20 md:flex-row">
@@ -155,10 +151,372 @@
           <div
             class="grid lg:grid-cols-3 md:grid-cols-2 lg:px-8 sm:px-6 gap-12 lg:gap-8 px-4"
           >
-            <!-- card no 1 -->
-            <div class="border-2 border-solid border-color-gray">card 1</div>
-            <div class="border-2 border-solid border-color-gray">card 2</div>
-            <div class="border-2 border-solid border-color-gray">card 3</div>
+            <!-- cards -->
+            <!-- card 1 -->
+            <div
+              class="border-2 border-solid border-color-gray text-center py-20 px-5 rounded-2xl cursor-pointer hover:bg-color-primary-dark ease-in duration-200"
+            >
+              <div
+                class="bg-color-secondary inline-block py-5 px-6 rounded-2xl"
+              >
+                <i class="fa fa-wheelchair-alt text-4xl"></i>
+              </div>
+              <h3 class="text-xl font-bold py-4">Electric Wheelchair</h3>
+              <p class="leading-relaxed">
+                even we can heel disability humans with our site
+              </p>
+            </div>
+            <!-- card 2 -->
+            <div
+              class="bg-color-primary-dark border-2 border-solid border-color-gray text-center py-20 px-5 rounded-2xl cursor-pointer hover:bg-color-primary-light ease-in duration-200"
+            >
+              <div
+                class="bg-color-secondary inline-block py-5 px-6 rounded-2xl"
+              >
+                <i class="fa-solid fa-gamepad text-4xl"></i>
+              </div>
+              <h3 class="text-xl font-bold py-4">Electric Wheelchair</h3>
+              <p class="leading-relaxed">
+                even we can heel disability humans with our site
+              </p>
+            </div>
+            <!-- card 3 -->
+            <div
+              class="border-2 border-solid border-color-gray text-center py-20 px-5 rounded-2xl cursor-pointer hover:bg-color-primary-dark ease-in duration-200"
+            >
+              <div
+                class="bg-color-secondary inline-block py-5 px-6 rounded-2xl"
+              >
+                <i class="fa-solid fa-phone-volume text-4xl"></i>
+              </div>
+              <h3 class="text-xl font-bold py-4">Electric Wheelchair</h3>
+              <p class="leading-relaxed">
+                even we can heel disability humans with our site
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="saving-idea">
+        <div class="container py-20 relative">
+          <!-- blobs of background -->
+          <div class="blob1"></div>
+
+          <!-- blob second -->
+          <div class="blob2"></div>
+          <!-- blobs of background -->
+          <div class="flex flex-col items-center justify-between md:flex-row">
+            <div class="mb-12 md:w-1/2">
+              <img src="imgs/robot-gr.png" alt="green robot" />
+            </div>
+            <div class="text-center md:text-left md:w-1/2 md:ml-20">
+              <h4 class="font-bold text-color-secondary mb-4">Saving Idea</h4>
+              <h1 class="title mb-4">Community Of Inteligence Users</h1>
+              <p class="leading-relaxed mb-10">
+                you can share your idea with us without any limitation or any
+                age-limit be in our family
+              </p>
+              <button class="btn">Read More</button>
+            </div>
+          </div>
+        </div>
+        <!-- part 3 joining -->
+      </section>
+      <section id="how-join-us" class="bg-color-primary-light">
+        <div class="container py-20">
+          <div class="text-center m-auto mb-20 md:w-1/2">
+            <h4 class="font-bold text-color-secondary mb-4">
+              How to join Iluminati
+            </h4>
+            <h1 class="title">Join Amirmohammad to make a robot</h1>
+          </div>
+
+          <div
+            class="flex flex-col items-center justify-between space-y-6 md:flex-row md:space-y-0 md:space-x-6"
+          >
+            <!-- card1 -->
+            <div class="text-center cursor-pointer">
+              <div
+                class="relative bg-color-primary-dark inline-block px-6 py-3 rounded-lg cursor-pointer hover:bg-color-secondary ease-in duration-200"
+              >
+                <p class="text-6xl">1</p>
+              </div>
+              <h3 class="text-xl font-bold py-4">Install our app</h3>
+              <p class="leading-relaxed">
+                it's a test of our app in the menu click on app
+              </p>
+            </div>
+            <!-- card2 -->
+            <div class="text-center cursor-pointer">
+              <div
+                class="relative inline-block px-6 py-3 rounded-lg cursor-pointer bg-color-secondary"
+              >
+                <p class="text-6xl">2</p>
+              </div>
+              <h3 class="text-xl font-bold py-4">test it if you like</h3>
+              <p class="leading-relaxed">
+                it's a test of our app in the menu click on app
+              </p>
+            </div>
+            <!-- card3 -->
+            <div class="text-center cursor-pointer">
+              <div
+                class="relative bg-color-primary-dark inline-block px-6 py-3 rounded-lg cursor-pointer hover:bg-color-secondary ease-in duration-200"
+              >
+                <p class="text-6xl">3</p>
+              </div>
+              <h3 class="text-xl font-bold py-4">
+                suggest more features or option
+              </h3>
+              <p class="leading-relaxed">
+                it's a test of our app in the menu click on app
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- part 4 of sections -->
+      <section id="stories">
+        <div class="container py-20">
+          <div class="text-center m-auto mb-20 w-1/2">
+            <h4 class="font-bold text-color-secondary mb-4">Our Goods</h4>
+            <h1 class="title">inja mikonim too pachatoon</h1>
+          </div>
+          <!-- Goods Images -->
+          <div class="mt-8">
+            <div class="flex items-center justify-center flex-wrap">
+              <img
+                src="imgs/tech1.jpg"
+                class="h-20 w-20 rounded-full p-1 m-3 cursor-pointer goods-pic active-pic"
+                onclick="showImg()"
+              />
+              <img
+                src="imgs/graphic card 3.webp"
+                class="h-20 w-20 rounded-full p-1 m-3 cursor-pointer goods-pic"
+                onclick="showImg()"
+              />
+              <img
+                src="imgs/graphic card.webp"
+                class="h-20 w-20 rounded-full p-1 m-3 cursor-pointer goods-pic"
+                onclick="showImg()"
+              />
+              <img
+                src="imgs/graphic card2.webp"
+                class="h-20 w-20 rounded-full p-1 m-3 cursor-pointer goods-pic"
+                onclick="showImg()"
+              />
+              <img
+                src="imgs/best card graphic.webp"
+                class="h-20 w-20 rounded-full p-1 m-3 cursor-pointer goods-pic"
+                onclick="showImg()"
+              />
+            </div>
+            <div
+              class="grid place-items-center text-center m-auto md:w-4/5 min-h-[40vh]"
+            >
+              <div class="goods-text active-text">
+                <p class="md:text-2xl mb-6">
+                  there are some of our products that should you use to make and
+                  start robot project
+                </p>
+                <h4 class="font-bold text-color-secondary mb-1">
+                  card graphic1
+                </h4>
+                <p>technology developers</p>
+              </div>
+              <div class="goods-text">
+                <p class="md:text-2xl mb-6">
+                  there are some of our products that should you use to make and
+                  start robot project
+                </p>
+                <h4 class="font-bold text-color-secondary mb-1">
+                  card graphic2
+                </h4>
+                <p>core i7</p>
+              </div>
+              <div class="goods-text">
+                <p class="md:text-2xl mb-6">
+                  there are some of our products that should you use to make and
+                  start robot project
+                </p>
+                <h4 class="font-bold text-color-secondary mb-1">
+                  card graphic3
+                </h4>
+                <p>RTX 5400</p>
+              </div>
+              <div class="goods-text">
+                <p class="md:text-2xl mb-6">
+                  there are some of our products that should you use to make and
+                  start robot project
+                </p>
+                <h4 class="font-bold text-color-secondary mb-1">
+                  card graphic4
+                </h4>
+                <p>GTX50300</p>
+              </div>
+              <div class="goods-text">
+                <p class="md:text-2xl mb-6">
+                  there are some of our products that should you use to make and
+                  start robot project
+                </p>
+                <h4 class="font-bold text-color-secondary mb-1">
+                  card graphic5
+                </h4>
+                <p>Intel core i9</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- part5 to suggest and why use our app -->
+      <section id="suggestion" class="bg-color-primary-light">
+        <div class="container py-20">
+          <div class="text-center m-auto mb-20 md:w-1/2">
+            <h4 class="font-bold text-color-secondary mb-4">
+              these are some suggestion
+            </h4>
+            <h1 class="title">
+              improve your brain with new smart app and intelligent
+            </h1>
+          </div>
+          <div class="grid gap-5 md:grid-cols-2 lg:grid-cols-3">
+            <!-- card no 1 suggestion -->
+            <div>
+              <div class="lg:h-[40vh] rounded-xl scale-100 overflow-hidden">
+                <img
+                  src="imgs/tech2.jpg"
+                  alt=""
+                  class="lg:h-full hover:scale-125 transition duration-300 ease-in-out"
+                />
+              </div>
+              <div>
+                <div class="flex items-center gap-5 py-5">
+                  <p>22 june 2024</p>
+                  <p>2 min for read</p>
+                </div>
+                <a
+                  href="#suggestion"
+                  class="text-2xl font-bold underline hover:text-color-secondary hover:no-underline"
+                  >5 things thaat help you to be update about technology</a
+                >
+                <p class="leading-relaxed my-5">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                  voluptas rerum neque magnam eaque illum expedita nam,
+                  doloribus, quibusdam...
+                </p>
+                <a
+                  href="#suggestion"
+                  class="inline-block font-bold hover:text-color-secondary transition-all duration-300 ease-in-out"
+                >
+                  <span
+                    class="tracking-wider capitalize underline hover:no-underline"
+                    >Read More</span
+                  ></a
+                >
+              </div>
+            </div>
+
+            <!-- card no 2 suggestion -->
+            <div>
+              <div class="lg:h-[40vh] rounded-xl scale-100 overflow-hidden">
+                <img
+                  src="imgs/tech3.jpg"
+                  alt=""
+                  class="lg:h-full hover:scale-125 transition duration-300 ease-in-out"
+                />
+              </div>
+              <div>
+                <div class="flex items-center gap-5 py-5">
+                  <p>22 june 2024</p>
+                  <p>2 min for read</p>
+                </div>
+                <a
+                  href="#suggestion"
+                  class="text-2xl font-bold underline hover:text-color-secondary hover:no-underline"
+                  >5 things thaat help you to be update about technology</a
+                >
+                <p class="leading-relaxed my-5">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                  voluptas rerum neque magnam eaque illum expedita nam,
+                  doloribus, quibusdam...
+                </p>
+                <a
+                  href="#suggestion"
+                  class="inline-block font-bold hover:text-color-secondary transition-all duration-300 ease-in-out"
+                >
+                  <span
+                    class="tracking-wider capitalize underline hover:no-underline"
+                    >Read More</span
+                  ></a
+                >
+              </div>
+            </div>
+
+            <!-- card no 3 suggestion -->
+            <div>
+              <div class="lg:h-[40vh] rounded-xl scale-100 overflow-hidden">
+                <img
+                  src="imgs/tech4.jpg"
+                  alt=""
+                  class="lg:h-full hover:scale-125 transition duration-300 ease-in-out"
+                />
+              </div>
+              <div>
+                <div class="flex items-center gap-5 py-5">
+                  <p>22 june 2024</p>
+                  <p>2 min for read</p>
+                </div>
+                <a
+                  href="#suggestion"
+                  class="text-2xl font-bold underline hover:text-color-secondary hover:no-underline"
+                  >5 things thaat help you to be update about technology</a
+                >
+                <p class="leading-relaxed my-5">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                  voluptas rerum neque magnam eaque illum expedita nam,
+                  doloribus, quibusdam...
+                </p>
+                <a
+                  href="#suggestion"
+                  class="inline-block font-bold hover:text-color-secondary transition-all duration-300 ease-in-out"
+                >
+                  <span
+                    class="tracking-wider capitalize underline hover:no-underline"
+                    >Read More</span
+                  ></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- part 6 app downloader -->
+      <section id="download-app">
+        <div class="container h-[80vh] grid place-items-center">
+          <div class="text-center md:w-2/3 m-auto">
+            <h1 class="title">download our app and give us money</h1>
+            <p class="leading-relaxed pt-5">
+              by installing this app give me more money and make me rich to
+              achive my goals
+            </p>
+            <div
+              class="flex flex-col md:flex-row items-center justify-center gap-5 pt-10"
+            >
+              <a
+                href="#"
+                class="bg-color-white h-16 w-44 grid place-items-center rounded-lg hover:opacity-70"
+              >
+                <img src="imgs/myket.png" alt=""
+              /></a>
+              <a
+                href="#"
+                class="bg-color-white h-16 w-44 grid place-items-center rounded-lg hover:opacity-70"
+              >
+                <img src="imgs/play store.png" alt=""
+              /></a>
+            </div>
           </div>
         </div>
       </section>
