adding footer and sticky header

--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,7 @@
   </head>
   <body class="bg-color-primary text-color-white tracking-wider">
     <!-- header started -->
-    <header>
+    <header class="sticky top-0 z-50">
       <!-- navbar -->
       <nav class="container flex justify-between items-center">
         <div class="py-5 text-color-secondary font-serif text-3xl">
@@ -516,6 +516,88 @@
               >
                 <img src="imgs/play store.png" alt=""
               /></a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end part : footer part -->
+      <section id="footer">
+        <div class="bg-color-primary-light relative">
+          <div class="container py-10">
+            <div class="grid gap-10 md:grid-cols-3 pb-10">
+              <div class="space-y-6">
+                <h4 class="font-bold text-lg">About App</h4>
+                <p class="leading-relaxed">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Pariatur quibusdam
+                </p>
+                <div class="flex gap-5 items-center">
+                  <p>follow us</p>
+                  <i
+                    class="fa-regular fa-thumbs-up cursor-pointer hover:text-color-secondary"
+                  ></i>
+                  <i
+                    class="fa-brands fa-facebook cursor-pointer hover:text-color-secondary"
+                  ></i>
+                  <i
+                    class="fa-brands fa-instagram cursor-pointer hover:text-color-secondary"
+                  ></i>
+                  <i
+                    class="fa-brands fa-twitter cursor-pointer hover:text-color-secondary"
+                  ></i>
+                </div>
+              </div>
+              <div class="flex justify-between md:justify-around">
+                <div class="space-y-6">
+                  <h4 class="font-bold text-lg">click here</h4>
+                  <ul class="space-y-3">
+                    <li
+                      class="underline hover:no-underline hover:text-color-secondary"
+                    >
+                      <a href="#home">Home</a>
+                    </li>
+                    <li
+                      class="underline hover:no-underline hover:text-color-secondary"
+                    >
+                      <a href="#home">App</a>
+                    </li>
+                    <li
+                      class="underline hover:no-underline hover:text-color-secondary"
+                    >
+                      <a href="#home">contact</a>
+                    </li>
+                    <li
+                      class="underline hover:no-underline hover:text-color-secondary"
+                    >
+                      <a href="#home">robots</a>
+                    </li>
+                    <li
+                      class="underline hover:no-underline hover:text-color-secondary"
+                    >
+                      <a href="#home">About</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="space-y-6">
+                <h4 class="font-bold text-lg">send letter</h4>
+                <p class="leading-relaxed">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                </p>
+                <div class="flex items-center">
+                  <input
+                    type="text"
+                    class="w-3/4 text-color-gray bg-color-white p-2 lg:p-3 rounded-l-md focus:outline-none"
+                    placeholder="enter your email"
+                  />
+                  <button
+                    type="submit"
+                    class="bg-color-secondary px-4 py-2 lg:px-5 lg-py3 rounded-r-md hover:opacity-90"
+                  >
+                    <i class="fa-solid fa-chevron-right max-lg:text-xl"></i>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
