adding links of differents parts

--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,5 @@
+<!-- main page -->
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -16,7 +18,7 @@
   </head>
   <body class="bg-color-primary text-color-white tracking-wider">
     <!-- header started -->
-    <header class="sticky top-0 z-50">
+    <header class="headers">
       <!-- navbar -->
       <nav class="container flex justify-between items-center">
         <div class="py-5 text-color-secondary font-serif text-3xl">
@@ -33,32 +35,32 @@
             </li>
             <li>
               <a
-                href="#app"
+                href="index3.html"
                 class="hover:text-color-secondary ease-in duration-200"
                 >RobotApp</a
               >
             </li>
             <li>
               <a
-                href="#about"
+                href="index.html"
                 class="hover:text-color-secondary ease-in duration-200"
-                >About</a
+                >shop</a
               >
             </li>
             <li>
               <a
-                href="#signin/up"
+                href="index2.html"
                 class="hover:text-color-secondary ease-in duration-200"
                 >sign in/up</a
               >
             </li>
             <li>
               <!-- button for sell -->
-              <button
+              <a
+                href="index.html"
                 class="bg-color-secondary px-9 py-3 rounded-md capitalize font-sans hover:opacity-80 ease-in duration-200"
+                >But Now</a
               >
-                Buy Now
-              </button>
             </li>
           </ul>
         </div>
@@ -83,7 +85,7 @@
             <li>
               <a
                 id="hlink"
-                href="#app"
+                href="index3.html"
                 class="hover:text-color-secondary ease-in duration-200"
                 >RobotApp</a
               >
@@ -91,22 +93,26 @@
             <li>
               <a
                 id="hlink"
-                href="#about"
+                href="index.html"
                 class="hover:text-color-secondary ease-in duration-200"
-                >About</a
+                >Shop</a
               >
             </li>
             <li>
               <a
                 id="hlink"
-                href="#signin/up"
+                href="index2.html"
                 class="hover:text-color-secondary ease-in duration-200"
                 >sign in/up</a
               >
             </li>
             <li>
               <!-- button for sell -->
-              <button class="btn">Buy Now</button>
+              <a
+                href="index.html"
+                class="bg-color-secondary px-9 py-3 rounded-md capitalize font-sans hover:opacity-80 ease-in duration-200"
+                >But Now</a
+              >
             </li>
           </ul>
         </div>
@@ -131,7 +137,11 @@
                 Man khode khodam mikhaham jahan ro fath konam ba sandali chon
                 sandali roo az man gereftesh beni bella bemola
               </p>
-              <button class="btn">Buy Now</button>
+              <a
+                href="index.html"
+                class="bg-color-secondary px-9 py-3 rounded-md capitalize font-sans hover:opacity-80 ease-in duration-200"
+                >But Now</a
+              >
             </div>
             <div class="md:w-1/2">
               <img src="imgs/robot inteligence.png" alt="robot human logo" />
@@ -564,7 +574,7 @@
                     <li
                       class="underline hover:no-underline hover:text-color-secondary"
                     >
-                      <a href="#home">contact</a>
+                      <a href="index2.html">sign in/up</a>
                     </li>
                     <li
                       class="underline hover:no-underline hover:text-color-secondary"
@@ -574,7 +584,7 @@
                     <li
                       class="underline hover:no-underline hover:text-color-secondary"
                     >
-                      <a href="#home">About</a>
+                      <a href="index.html">shop</a>
                     </li>
                   </ul>
                 </div>
